<resources>
    <string name="app_name">Expnesify</string>
    <string name="hello_world">Hello world!</string>
    <string name="textAll">Total Expense for this month is </string>
    <string name="action_settings">Settings</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_history">History</string>
    <string name="action_export">Export Data</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="save">SAVE</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="foodDrinks">Food and Drinks</string>
    <string name="health">Health</string>
    <string name="transportation">Transportation</string>
    <string name="leisure">Leisure</string>
    <string name="others">Others</string>

    <string name="additionalInfo">Additional Info</string>
    <string name="dateText">Date</string>
    <string name="noteText">Notes</string>
    <string name="newExpense">New Expense</string>
    <string name="main_activity">MainActivity</string>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_expense">EditExpense</string>
    <string name="from_date">From Date</string>
    <string name="appwidget_text">Expense for this month is </string>
    <string name="add_widget">Add widget</string>

    <string name="pref_metric_key" translatable="false">key</string>
    <string name="pref_default">1000</string>
    <string name="title_activity_statistics">statistics</string>
    <string name="title_activity_export_data">exportData</string>

    <string name="cancelDcr">Button to cancel expense</string>
    <string name="saveDcr">Button to save expense</string>
    <string name="deleteDcr">Button to delete expense</string>
    <string name="amountDcr">Text box to add amount expense</string>

    <string name="foodDcr">Radio Box for food expense cateogry</string>
    <string name="healthDcr">Radio Box for health expense cateogry</string>
    <string name="transDcr">Radio Box for Transportaion expense cateogry</string>
    <string name="leisureDcr">Radio Box for food expense cateogry</string>
    <string name="otherDcr">Radio Box for other expense cateogry</string>
    <string name="dateDcr">Date Box for expense date</string>
    <string name="noteDcr">Date Box for expense note</string>
    <string name="on">on</string>
    <string name="dollar">$</string>

    <string name="amountError">Amount is required!</string>
    <string name="dateError">Date is required!</string>
    <string name="catError">Select a expense category!</string>

    <string name="graph">Graph for Monthly Spendings</string>

    <string name="emptyData">No Expense Present for this month</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
</resources>
