<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.expnesify.NewExpense">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel"
                    android:contentDescription="@string/cancelDcr"
                    />

                <Button
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save"
                    android:contentDescription="@string/saveDcr"
                    />
                <!--<TextView android:layout_weight="1" android:layout_height="match_parent"-->
                <!--android:text="@string/cancel" />-->

                <!--<TextView android:layout_weight="1" android:layout_height="match_parent"-->
                <!--android:text="@string/save" />-->

            </LinearLayout>

            <TextView
                android:id="@+id/amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:text="@string/amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/amountText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:contentDescription="@string/amountDcr"
                />

            <TextView
                android:id="@+id/category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left|top"
                android:text="@string/category"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:id="@+id/radioCateogry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foodDrinks"
                    android:contentDescription="@string/foodDcr"
                    />

                <RadioButton
                    android:id="@+id/health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/health"
                    android:contentDescription="@string/healthDcr"
                    />

                <RadioButton
                    android:id="@+id/leisure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/leisure"
                    android:contentDescription="@string/leisureDcr"
                    />

                <RadioButton
                    android:id="@+id/transportation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/transportation"
                    android:contentDescription="@string/transDcr"
                    />

                <RadioButton
                    android:id="@+id/others"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/others"
                    android:contentDescription="@string/otherDcr"
                    />

            </RadioGroup>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additionalInfo"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dateText"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/etxt_fromdate1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/from_date"
                android:contentDescription="@string/dateDcr"
                />

            <TextView
                android:id="@+id/noteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noteText"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/noteDcr"
                />

        </LinearLayout>
    </ScrollView>

</FrameLayout>
