<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"-->
        <!--android:orderInCategory="100" app:showAsAction="never" />-->
    <item android:id="@+id/action_statistics" android:title="@string/action_statistics"
        android:orderInCategory="200" app:showAsAction="never" />
    <item android:id="@+id/action_history" android:title="@string/action_history"
        android:orderInCategory="300" app:showAsAction="never" />
    <item android:id="@+id/action_export" android:title="@string/action_export"
        android:orderInCategory="400" app:showAsAction="never" />
    <item android:id="@+id/newExpense" android:title="@string/newExpense"
        android:orderInCategory="400" app:showAsAction="always"
        />

</menu>
